Cambio a estado de resultados

--- a/Views/Reports/EstadosResultados.cshtml
+++ b/Views/Reports/EstadosResultados.cshtml
@@ -47,10 +47,10 @@
         .Sum (d => d.saldo_acumulado);
 
     // Luego, calcula el resultado integral total
-    decimal resultadoIntegralTotal2 = totalIngresosT - totalGastosT;
+    decimal resultadoIntegralTotal2 = totalIngresosT2 - totalGastosT2;
 
     // Calcula el porcentaje de resultado integral total respecto a los ingresos totales
-    decimal porcentajeResultadoTotal2 = totalIngresosT != 0 ? (resultadoIntegralTotal / totalIngresosT) * 100 : 0;
+    decimal porcentajeResultadoTotal2 = totalIngresosT2 != 0 ? (resultadoIntegralTotal2 / totalIngresosT2) * 100 : 0;
 }
 
 <!doctype html>
