--- a/Views/Reports/BalanceComprobacion.cshtml
+++ b/Views/Reports/BalanceComprobacion.cshtml
@@ -130,17 +130,13 @@
                 }
 
 
-                <tr class="total-row">
+               <tr class="total-row">
                     <td colspan="3" class="text-center" style="padding-bottom:0.8rem; padding-top: 0.8rem;">TOTAL</td>
                     <td class="money" style="padding-bottom:0.8rem; padding-top: 0.8rem;">
-                        @MoneyUtils.GetDefaultFormatAsString(
-                        (Model.CuentasUnificadas?.Sum (c => c.Cargos) ?? 0)
-                        )
+                        @MoneyUtils.GetDefaultFormatAsString((Model.CuentasUnificadas?.Where (c =>Model.NivelSeleccionado == 1 || c.Nivel == 2).Sum (c => c.Cargos) ?? 0))
                     </td>
                     <td class="money" style="padding-bottom:0.8rem; padding-top: 0.8rem;">
-                        @MoneyUtils.GetDefaultFormatAsString(
-                        (Model.CuentasUnificadas?.Sum (c => c.Abonos) ?? 0)
-                        )
+                        @MoneyUtils.GetDefaultFormatAsString((Model.CuentasUnificadas?.Where (c =>Model.NivelSeleccionado == 1 || c.Nivel == 2).Sum (c => c.Abonos) ?? 0))
                     </td>
                     <td colspan="2" class="money" style="padding-bottom:0.8rem; padding-top: 0.8rem;">-</td>
                 </tr>
